<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">物业服务</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="zh_user_name">用户名</string>
    <string name="zh_telenum">手机号码</string>
    <string name="zh_room_name">单元名称</string>
    <string name="password">Password</string>
    <string name="zh_password">密码</string>
    <string name="log_in">登录</string>
    <string name="sign_in">注册新用户</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="title_activity_main">Property Service</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="username_password_error">Username or Password is wrong</string>
    <string name="request_post">POST</string>
    <string name="request_get">GET</string>
    <string name="title_activity_property">PropertyActivity</string>


    <string name="announcement">小区公告</string>
    <string name="parking_fee">停车费</string>
    <string name="property_fee">物业费</string>
    <string name="utilities_fee">公共水电费</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="title_activity_utilities">UtilitiesActivity</string>
    <string name="title_activity_property_rule">PropertyRuleActivity</string>
    <string name="action_message">消息</string>

    <string name="property_detail">物业费缴纳明细</string>
    <string name="parking_detail">停车费缴纳明细</string>
    <string name="utilities_detail">公共水电费缴纳明细</string>
    <string name="pay_notice">已阅读，确认无误请勾选并完成缴费</string>
    <string name="pay_month">缴纳月份</string>
    <string name="pay">缴纳</string>
    <string name="from">从</string>
    <string name="to">至</string>
    <string name="total">共计</string>
    <string name="rmb">元</string>
    <string name="pay_confirm">确认支付</string>

    <!-- 用户信息 -->
    <string name="room">单元</string>
    <string name="no_room">暂无</string>

    <string name="nickname">昵称</string>
    <string name="birthday">生日</string>
    <string name="signal">个性签名</string>

    <!-- 数字 -->
    <string name="zero">0</string>
    <string name="one">1</string>


    <!-- navigation -->
    <string name="back">返回</string>
    <string name="done">完成</string>

    <!-- title -->
    <string name="title_activity_payment_history">历史缴费信息</string>
    <string name="title_activity_personal_info">个人信息</string>
    <string name="title_activity_property_check">物业费缴费</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">确认支付</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nickname">NicknameActivity</string>
    <string name="title_activity_payment_state">当月缴费情况</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_register">RegisterActivity</string>

</resources>
