<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/propertyPay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.antonioleiva.mvpexample.app.payment.property.PropertyCheckActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_detail"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/pay_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text=""
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pay_month_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.87"
        android:text="@string/pay_month"
        android:textColor="#000000"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/pay"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/month_select"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_pay"
            />

        <TextView
            android:id="@+id/text_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_toEndOf="@+id/month_select"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_toEndOf="@+id/text_to"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/text_pay"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_toEndOf="@+id/text_total"
            android:layout_below="@+id/text_pay"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/text_rmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb"
            android:layout_toEndOf="@+id/total"
            android:layout_below="@+id/text_pay"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="@dimen/text_margin"-->
    <!--android:layout_marginStart="@dimen/text_margin"-->
    <!--&gt;-->

    <!--<AutoCompleteTextView-->
    <!--android:id="@+id/date_from"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/from"-->
    <!--android:inputType="date"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true"-->
    <!--android:textColor="@color/black" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColorHint="@color/black"-->
    <!--&gt;-->

    <!--<AutoCompleteTextView-->
    <!--android:id="@+id/date_to"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="@dimen/text_margin"-->
    <!--android:layout_marginStart="@dimen/text_margin"-->
    <!--android:hint="@string/to"-->
    <!--android:inputType="date"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true"-->
    <!--android:textColor="@color/black"-->
    <!--/>-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <Button
        android:id="@+id/check_btn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:gravity="center_vertical"
        android:text="@string/pay_confirm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
</android.support.v7.widget.LinearLayoutCompat>
