<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.antonioleiva.mvpexample.app.personalInfo.PersonalInfoActivity"
    tools:showIn="@layout/activity_personal_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_half"
            android:paddingBottom="@dimen/activity_vertical_margin_half"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/room"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/room_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="2dp"
                android:singleLine="true"
                android:text="@string/no_room"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_half"
            android:paddingBottom="@dimen/activity_vertical_margin_half"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/nickname"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/nickname_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="1dp"
                android:singleLine="true"
                android:text="@string/no_room"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_half"
            android:paddingBottom="@dimen/activity_vertical_margin_half"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/birthday"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/birthday_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="1dp"
                android:singleLine="true"
                android:text="@string/no_room"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_half"
            android:paddingBottom="@dimen/activity_vertical_margin_half"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/signal"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/signal_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="1dp"
                android:singleLine="true"
                android:text="@string/no_room"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
