<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="32dp"
    tools:context="com.antonioleiva.mvpexample.app.login.RegisterActivity">

    <LinearLayout
        android:id="@+id/phone_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zh_telenum"
                android:inputType="phone"
                android:textColor="@color/black"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zh_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/roomName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zh_room_name"
                android:inputType="textPhonetic"
                android:textColor="@color/black"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/validateCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="验证码："
                android:textSize="20sp"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/validateCode"
                android:ems="4"
                android:maxLength="4"
                android:inputType="phone" />

            <Button
                android:id="@+id/getCode"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/code"
                android:text="获取验证码"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
